# Trist-Small-Gui

./: CMakeLists.txt  Main.qml  README.md  main.cpp
qml/components/: ActivityBar.qml  ActivityBarItem.qml  IconButton.qml  MainContent.qml  RightPanel.qml  Sidebar.qml  SidebarPanel.qml
